Finished implementing all Angajat types functionality, created the menu, added full functionality for Angajat gestioning, tested with succes everything so far

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -111,6 +111,7 @@
     "chrono": "cpp",
     "ratio": "cpp",
     "iomanip": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "fstream": "cpp"
   }
 }
